HW 2_8 commit 2